--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"compile": "tsc"
+		"compile-typescript": "tsc && tsc-alias",
+		"watch-typescript": "concurrently --kill-others \"tsc -w\" \"tsc-alias -w\""
 	},
 	"repository": {
 		"type": "git",
@@ -18,7 +19,8 @@
 		"url": "https://github.com/stad-nico/File-Server/issues"
 	},
 	"homepage": "https://github.com/stad-nico/File-Server#readme",
-	"dependencies": {
+	"devDependencies": {
+		"tsc-alias": "^1.8.2",
 		"typescript": "^4.9.5"
 	}
 }
