--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"homepage": "https://github.com/stad-nico/File-Server#readme",
 	"devDependencies": {
+		"concurrently": "^7.6.0",
 		"tsc-alias": "^1.8.2",
 		"typescript": "^4.9.5"
 	}
