--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"devDependencies": {
 		"@types/node": "^18.14.5",
 		"concurrently": "^7.6.0",
+		"fantasticon": "^2.0.0",
 		"tsc-alias": "^1.8.2",
 		"typescript": "^4.9.5"
 	}
