--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@types/node": "^18.14.6",
 		"concurrently": "^7.6.0",
 		"fantasticon": "^2.0.0",
+		"parcel": "^2.8.3",
 		"tsc-alias": "^1.8.2",
 		"typescript": "^4.9.5"
 	}
