made backend integration promise-based

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 SERVER_PORT=8000
 # client server port, overrides parcel default value (1234)
 PORT=3000
+SAVE_LOCATION="C:\FILE_SERVER_SAVE_LOCATION"
